# AIApp

backend/: .env.example  README.md  pyproject.toml
backend/.github/: copilot-instructions.md
backend/api/: authentication.py  google_auth.py  middleware.py  models.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_verificationcode_purpose.py
backend/chatapi/: models.py  serializers.py  throttling.py  views.py
backend/chatapi/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/chat/: page.tsx
frontend/components/: AuthGuard.tsx  AuthProvider.tsx  ChatUI.tsx  GoogleLoginButton.tsx  LoginForm.tsx  LogoutButton.tsx  NavBar.tsx  PasswordResetConfirmForm.tsx  PasswordResetRequestForm.tsx  ProfileInfo.tsx  RegisterForm.tsx  VerifyCodeForm.tsx
frontend/lib/: axios.ts
frontend/store/: user.ts
